asva audio prepare scripts

--- a/more_scripts/analyse_vae_audio.ipynb
+++ b/more_scripts/analyse_vae_audio.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_571131/4177442219.py:5: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
+      "/tmp/ipykernel_1308832/4177442219.py:5: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     }
@@ -29,34 +29,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sxk230060/miniconda3/envs/ltx/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "/home/sxk230060/miniconda3/envs/i2av/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/home/sxk230060/miniconda3/envs/i2av/lib/python3.9/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+      "  warn(\n"
      ]
     }
    ],
    "source": [
     "path='/home/sxk230060/TI2AV/misc/ltx_lora_training_i2v_t2v/more_scripts/'\n",
     "sys.path.append(path)\n",
-    "from analyse_vae_audio import VAEAudioAnalyse"
+    "from analyse_vae_audio_auffusion import VAEAudioAnalyse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cannot initialize model with low cpu memory usage because `accelerate` was not found in the environment. Defaulting to `low_cpu_mem_usage=False`. It is strongly recommended to install `accelerate` for faster and less memory-intense model loading. You can do so with: \n",
+      "```\n",
+      "pip install accelerate\n",
+      "```\n",
+      ".\n",
+      "Fetching 17 files: 100%|██████████| 17/17 [00:00<00:00, 98894.82it/s]\n",
+      "/home/sxk230060/miniconda3/envs/i2av/lib/python3.9/site-packages/torch/nn/utils/weight_norm.py:143: FutureWarning: `torch.nn.utils.weight_norm` is deprecated in favor of `torch.nn.utils.parametrizations.weight_norm`.\n",
+      "  WeightNorm.apply(module, name, dim)\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Only 2D, 3D, 4D, 5D padding with non-constant padding are supported for now",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m vae_obj \u001b[38;5;241m=\u001b[39m VAEAudioAnalyse()\n\u001b[1;32m      2\u001b[0m audio_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/mnt/ssd0/saksham/i2av/AVSync15/audios_together/I4JKaLOIEGs_000030_000040_3.0_6.0.wav\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m latent \u001b[38;5;241m=\u001b[39m \u001b[43mvae_obj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maudio_to_latent\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m save_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtemp/reconstructed.wav\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      5\u001b[0m vae_obj\u001b[38;5;241m.\u001b[39mlatent_to_audio(latent, save_path)\n",
+      "File \u001b[0;32m~/ltx_lora_training_i2v_t2v/more_scripts/analyse_vae_audio_auffusion.py:265\u001b[0m, in \u001b[0;36mVAEAudioAnalyse.audio_to_latent\u001b[0;34m(self, audio_path)\u001b[0m\n\u001b[1;32m    263\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21maudio_to_latent\u001b[39m(\u001b[38;5;28mself\u001b[39m, audio_path):\n\u001b[1;32m    264\u001b[0m     audio, sr \u001b[38;5;241m=\u001b[39m load_wav(audio_path)\n\u001b[0;32m--> 265\u001b[0m     audio, spec \u001b[38;5;241m=\u001b[39m \u001b[43mget_mel_spectrogram_from_audio\u001b[49m\u001b[43m(\u001b[49m\u001b[43maudio\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    266\u001b[0m     norm_spec \u001b[38;5;241m=\u001b[39m normalize_spectrogram(spec)\n\u001b[1;32m    267\u001b[0m     norm_spec \u001b[38;5;241m=\u001b[39m pad_spec(norm_spec, \u001b[38;5;241m1024\u001b[39m)\n",
+      "File \u001b[0;32m~/ltx_lora_training_i2v_t2v/more_scripts/analyse_vae_audio_auffusion.py:179\u001b[0m, in \u001b[0;36mget_mel_spectrogram_from_audio\u001b[0;34m(audio, device)\u001b[0m\n\u001b[1;32m    177\u001b[0m audio \u001b[38;5;241m=\u001b[39m audio\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)    \n\u001b[1;32m    178\u001b[0m waveform \u001b[38;5;241m=\u001b[39m audio\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m--> 179\u001b[0m spec \u001b[38;5;241m=\u001b[39m \u001b[43mmel_spectrogram\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwaveform\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_fft\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2048\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_mels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m256\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msampling_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m16000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhop_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m160\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwin_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1024\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfmin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfmax\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcenter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m audio, spec\n",
+      "File \u001b[0;32m~/ltx_lora_training_i2v_t2v/more_scripts/analyse_vae_audio_auffusion.py:163\u001b[0m, in \u001b[0;36mmel_spectrogram\u001b[0;34m(y, n_fft, num_mels, sampling_rate, hop_size, win_size, fmin, fmax, center)\u001b[0m\n\u001b[1;32m    161\u001b[0m     mel_basis[\u001b[38;5;28mstr\u001b[39m(fmax)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(y\u001b[38;5;241m.\u001b[39mdevice)] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(mel)\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mto(y\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[1;32m    162\u001b[0m     hann_window[\u001b[38;5;28mstr\u001b[39m(y\u001b[38;5;241m.\u001b[39mdevice)] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mhann_window(win_size)\u001b[38;5;241m.\u001b[39mto(y\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[0;32m--> 163\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfunctional\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpad\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munsqueeze\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_fft\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mhop_size\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_fft\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mhop_size\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreflect\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    164\u001b[0m y \u001b[38;5;241m=\u001b[39m y\u001b[38;5;241m.\u001b[39msqueeze(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    165\u001b[0m spec \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstft(y, n_fft, hop_length\u001b[38;5;241m=\u001b[39mhop_size, win_length\u001b[38;5;241m=\u001b[39mwin_size, window\u001b[38;5;241m=\u001b[39mhann_window[\u001b[38;5;28mstr\u001b[39m(y\u001b[38;5;241m.\u001b[39mdevice)],\n\u001b[1;32m    166\u001b[0m                   center\u001b[38;5;241m=\u001b[39mcenter, pad_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreflect\u001b[39m\u001b[38;5;124m'\u001b[39m, normalized\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, onesided\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, return_complex\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/i2av/lib/python3.9/site-packages/torch/nn/functional.py:5209\u001b[0m, in \u001b[0;36mpad\u001b[0;34m(input, pad, mode, value)\u001b[0m\n\u001b[1;32m   5202\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreplicate\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m   5203\u001b[0m             \u001b[38;5;66;03m# Use slow decomp whose backward will be in terms of index_put.\u001b[39;00m\n\u001b[1;32m   5204\u001b[0m             \u001b[38;5;66;03m# importlib is required because the import cannot be top level\u001b[39;00m\n\u001b[1;32m   5205\u001b[0m             \u001b[38;5;66;03m# (cycle) and cannot be nested (TS doesn't support)\u001b[39;00m\n\u001b[1;32m   5206\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m importlib\u001b[38;5;241m.\u001b[39mimport_module(\n\u001b[1;32m   5207\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorch._decomp.decompositions\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   5208\u001b[0m             )\u001b[38;5;241m.\u001b[39m_replication_pad(\u001b[38;5;28minput\u001b[39m, pad)\n\u001b[0;32m-> 5209\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpad\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpad\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: Only 2D, 3D, 4D, 5D padding with non-constant padding are supported for now"
+     ]
+    }
+   ],
    "source": [
     "vae_obj = VAEAudioAnalyse()\n",
-    "audio_path = '/home/sxk230060/TI2AV/misc/ltx_lora_training_i2v_t2v/outputs/temp/cat_sample.wav'\n",
+    "audio_path = '/mnt/ssd0/saksham/i2av/AVSync15/audios_together/I4JKaLOIEGs_000030_000040_3.0_6.0.wav'\n",
     "latent = vae_obj.audio_to_latent(audio_path)\n",
-    "save_path = '/home/sxk230060/TI2AV/misc/ltx_lora_training_i2v_t2v/outputs/temp/cat_reconstructed.wav'\n",
+    "save_path = 'temp/reconstructed.wav'\n",
     "vae_obj.latent_to_audio(latent, save_path)"
    ]
   },
@@ -145,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ltx",
+   "display_name": "i2av",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
